--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
 :root {
-    --color-text: #d0d0d0;
-    --color-bars-background: #191919;
+    --color-foreground: #d0d0d0;
+    --color-foreground-highlight: #bbb;
+    --color-background: #191919;
+    --color-background-highlight: #333;
     --space:1rem;
+    --smallspace:.5rem;
 }
+
 
 * {
     box-sizing: border-box;
@@ -10,24 +14,43 @@
 
 body {
     background: #242424;
-    color: var(--color-text); 
+    color: var(--color-foreground); 
     font-family: 'Roboto', sans-serif;
     font-size: 16px; 
-
+    line-height: 1.4;
 }
+
 
 article {
     position: fixed;
     left: 0;
     right: 0;
     top: 0;
-    bottom: 0; 
+    bottom: 0;    
+}
+
+article#chat {
     display:grid;
-    grid-template-rows: auto 1fr auto;   
+    grid-template-rows: auto 1fr auto;
+}
+
+article#login {
+    background: rgba(0,0,0,.2);
+}
+article#login section {
+    background: var(--color-background);
+    padding:  var(--smallspace);
+
+}
+article#login div {
+     margin: var(--smallspace);
+}
+article#login label  {
+    display: block;
 }
 
 #title {
-    background: var(--color-bars-background);
+    background: var(--color-background);
     padding: var(--space); 
 }
 
@@ -45,46 +68,66 @@ article {
 
 }
 
-#input {
-    background: var(--color-bars-background);
+#msgInput {
+    background: var(--color-background);
     padding: var(--space);
 }
 
-#input form {
+#msgInput form {
     display: grid;
     grid-gap: .5rem;
     grid-template-columns: 1fr auto auto auto 1fr;
     grid-template-areas: ". user input button .";
 }
 
-#input input,
-#input button {
-    background: var(--color-text);
-    color: var(--color-bars-background);
+#msgInput input,
+#msgInput button {
+    background: var(--color-foreground);
+    color: var(--color-background);
 }
 
-#input div {
+#msgInput div {
     grid-area: user;
     padding: .5rem;
     border: none;
 }
 
-#input input {
-    grid-area: input;
+input {
     padding: .5rem;
     border: none;
+    background: var(--color-foreground);
+    color: var(--color-background);
+}
+
+#msgInput input {
+    grid-area: input;
     width: 50vw;
     max-width: 750px;
 }
 
-#input button {
-    grid-area: button;
+article#login button {
+    margin: var(--smallspace);
+}
+
+button {
     border: none;
     padding: .5rem 2rem;
+    background: var(--color-foreground);
+    color: var(--color-background);
+    cursor: pointer;
+
+}
+
+button:hover {
+    background: var(--color-foreground-highlight);
+}
+
+#msgInput button{
+    grid-area: button;
 }
 
 @media (max-width:800px) {
-    #input form {
+    #msgInput form {
         grid-template-rows: auto auto;
         grid-template-columns: 1fr auto;
         grid-template-areas: 
@@ -92,7 +135,7 @@ article {
             "user button";
     }
 
-    #input input {
+    #msgInput input {
         grid-area: input;
         width: 100%;
     }    
